--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,30 +5,29 @@ services:
   web:
     build: .
     command: >
-      sh -c "python manage.py migrate &&
-             gunicorn --bind 0.0.0.0:8000 core.wsgi:application"
+      sh -c "gunicorn --bind 0.0.0.0:8000 core.wsgi:application"
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
     ports:
       - "8000:8000"
-    environment:
-      - DB_HOST=db
-    depends_on:
-      - db
+#    environment:
+#      - DB_HOST=db
+#    depends_on:
+#      - db
 
-  db:
-    image: postgres:15
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
-      - ./docker/dump.sql:/docker-entrypoint-initdb.d/dump.sql
-    env_file:
-      - .env
-    environment:
-        - POSTGRES_DB=${DB_NAME}
-        - POSTGRES_USER=${DB_USER}
-        - POSTGRES_PASSWORD=${DB_PASSWORD}
+#  db:
+#    image: postgres:15
+#    volumes:
+#      - postgres_data:/var/lib/postgresql/data/
+#      - ./docker/dump.sql:/docker-entrypoint-initdb.d/dump.sql
+#    env_file:
+#      - .env
+#    environment:
+#        - POSTGRES_DB=${DB_NAME}
+#        - POSTGRES_USER=${DB_USER}
+#        - POSTGRES_PASSWORD=${DB_PASSWORD}
 
 volumes:
-  postgres_data:
+#  postgres_data:
   static_volume:
