--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ django-cors-headers==4.8.0
 django-ninja==1.4.3
 django-ninja-extra==0.30.1
 django-ninja-jwt==5.3.7
+gunicorn==23.0.0
 injector==0.22.0
+packaging==25.0
 psycopg2-binary==2.9.10
 pycparser==2.23
 pydantic==2.11.9
@@ -18,4 +20,3 @@ python-dotenv==1.1.1
 sqlparse==0.5.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
-gunicorn
